[gd_scene load_steps=10 format=2]

[ext_resource path="res://Levels/TemplateLevel.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/GFX/Interface/PNG/crossair_blueOutline.png" type="Texture" id=2]
[ext_resource path="res://Doors/Door.tscn" type="PackedScene" id=3]
[ext_resource path="res://Loot/Briefcase.tscn" type="PackedScene" id=4]
[ext_resource path="res://Levels/Tutorial.gd" type="Script" id=5]
[ext_resource path="res://Assets/SFX/message.wav" type="AudioStream" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 64, 128 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 64, 64 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 28, 28 )

[node name="Tutorial" instance=ExtResource( 1 )]
script = ExtResource( 5 )

[node name="TileMap" parent="Navigation2D" index="0"]
tile_data = PoolIntArray( 131073, 3, 7, 131074, 3, 196612, 131075, 3, 262149, 131076, 3, 2, 131077, 3, 2, 131078, 3, 2, 131079, 3, 2, 131080, 3, 1, 131082, 3, 0, 131083, 3, 2, 131084, 3, 2, 131085, 3, 2, 131086, 3, 2, 131087, 3, 2, 131088, 3, 2, 131089, 3, 2, 131090, 3, 2, 131091, 3, 2, 131092, 3, 2, 131093, 3, 2, 131094, 3, 2, 131095, 3, 1, 196609, 3, 131076, 196610, 3, 131072, 196611, 3, 65544, 196612, 4, 0, 196613, 4, 0, 196614, 4, 0, 196615, 4, 0, 196616, 3, 65538, 196618, 3, 65538, 196619, 4, 0, 196620, 4, 0, 196621, 4, 0, 196622, 4, 0, 196623, 4, 0, 196624, 4, 0, 196625, 4, 0, 196626, 4, 0, 196627, 4, 0, 196628, 4, 0, 196629, 4, 0, 196630, 4, 0, 196631, 3, 65538, 262145, 3, 327682, 262146, 3, 65544, 262147, 4, 0, 262148, 4, 0, 262149, 4, 4, 262150, 4, 0, 262151, 4, 0, 262152, 3, 65538, 262154, 3, 65538, 262155, 4, 0, 262156, 4, 0, 262157, 4, 0, 262158, 4, 0, 262159, 4, 0, 262160, 4, 0, 262161, 4, 0, 262162, 4, 0, 262163, 4, 0, 262164, 4, 0, 262165, 4, 0, 262166, 4, 0, 262167, 3, 65538, 327681, 3, 65538, 327682, 4, 0, 327683, 4, 0, 327684, 4, 0, 327685, 4, 2, 327686, 4, 0, 327687, 4, 0, 327688, 3, 65538, 327690, 3, 65538, 327691, 4, 0, 327692, 4, 0, 327693, 3, 0, 327694, 3, 2, 327695, 3, 2, 327696, 3, 2, 327697, 3, 2, 327698, 3, 2, 327699, 3, 2, 327700, 3, 5, 327701, 4, 0, 327702, 3, 65542, 327703, 3, 65540, 393217, 3, 65538, 393218, 4, 0, 393219, 4, 4, 393220, 4, 0, 393221, 4, 0, 393222, 4, 4, 393223, 4, 0, 393224, 3, 65536, 393225, 3, 2, 393226, 3, 65537, 393227, 4, 0, 393228, 4, 0, 393229, 3, 65538, 393230, 5, 1, 393231, 5, 1, 393232, 5, 1, 393233, 5, 1, 393234, 5, 1, 393235, 5, 1, 393236, 5, 1, 393237, 5, 1, 393238, 5, 1, 393239, 3, 65538, 458753, 3, 65538, 458754, 4, 0, 458755, 4, 0, 458756, 4, 4, 458757, 4, 0, 458758, 4, 4, 458759, 4, 0, 458760, 5, 1, 458761, 4, 0, 458762, 4, 0, 458763, 4, 0, 458764, 4, 0, 458765, 3, 65538, 458766, 5, 1, 458767, 5, 3, 458768, 5, 1, 458769, 5, 1, 458770, 5, 5, 458771, 5, 1, 458772, 5, 5, 458773, 5, 5, 458774, 5, 1, 458775, 3, 65538, 524289, 3, 65538, 524290, 4, 0, 524291, 4, 0, 524292, 4, 4, 524293, 4, 2, 524294, 4, 0, 524295, 4, 0, 524296, 5, 1, 524297, 4, 0, 524298, 4, 2, 524299, 4, 0, 524300, 4, 0, 524301, 3, 65538, 524302, 5, 1, 524303, 5, 1, 524304, 5, 1, 524305, 5, 3, 524306, 5, 1, 524307, 5, 3, 524308, 5, 1, 524309, 5, 1, 524310, 5, 1, 524311, 3, 6, 589825, 3, 65538, 589826, 4, 0, 589827, 4, 0, 589828, 4, 2, 589829, 4, 0, 589830, 4, 2, 589831, 4, 0, 589832, 5, 1, 589833, 4, 0, 589834, 4, 0, 589835, 4, 0, 589836, 4, 0, 589837, 3, 65538, 589838, 5, 1, 589839, 5, 5, 589840, 5, 1, 589841, 5, 5, 589842, 5, 3, 589843, 5, 1, 589844, 5, 1, 589845, 5, 3, 589846, 5, 1, 589847, 5, 1, 655361, 3, 65538, 655362, 4, 0, 655363, 4, 0, 655364, 4, 2, 655365, 4, 0, 655366, 4, 2, 655367, 4, 0, 655368, 3, 0, 655369, 3, 2, 655370, 3, 2, 655371, 3, 2, 655372, 3, 2, 655373, 3, 65540, 655374, 5, 1, 655375, 5, 1, 655376, 5, 3, 655377, 5, 1, 655378, 5, 5, 655379, 5, 3, 655380, 5, 3, 655381, 5, 1, 655382, 5, 1, 655383, 5, 1, 720897, 3, 262146, 720898, 3, 8, 720899, 4, 0, 720900, 4, 0, 720901, 4, 0, 720902, 4, 2, 720903, 4, 0, 720904, 3, 65538, 720909, 3, 65538, 720910, 5, 1, 720911, 5, 1, 720912, 5, 1, 720913, 5, 5, 720914, 5, 1, 720915, 5, 5, 720916, 5, 1, 720917, 5, 5, 720918, 5, 1, 720919, 3, 65541, 786433, 3, 131076, 786434, 3, 196608, 786435, 3, 8, 786436, 4, 0, 786437, 4, 0, 786438, 4, 0, 786439, 4, 0, 786440, 3, 65538, 786445, 3, 65538, 786446, 5, 1, 786447, 5, 1, 786448, 5, 5, 786449, 5, 1, 786450, 5, 1, 786451, 5, 1, 786452, 5, 1, 786453, 5, 5, 786454, 5, 1, 786455, 3, 65538, 851969, 3, 65543, 851970, 3, 196613, 851971, 3, 327685, 851972, 3, 2, 851973, 3, 2, 851974, 3, 2, 851975, 3, 2, 851976, 3, 65537, 851981, 3, 65538, 851982, 5, 1, 851983, 5, 1, 851984, 5, 1, 851985, 5, 1, 851986, 5, 1, 851987, 5, 1, 851988, 5, 1, 851989, 5, 1, 851990, 5, 1, 851991, 3, 65538, 917517, 3, 65536, 917518, 3, 2, 917519, 3, 2, 917520, 3, 2, 917521, 3, 2, 917522, 3, 2, 917523, 3, 2, 917524, 3, 2, 917525, 3, 2, 917526, 3, 2, 917527, 3, 65537 )

[node name="PlayerCharacter" parent="." index="1"]
position = Vector2( 412.293, 530.375 )

[node name="Door" parent="Doors" index="0" instance=ExtResource( 3 )]
position = Vector2( 1370.97, 347.94 )

[node name="Briefcase" parent="Loot" index="0" instance=ExtResource( 4 )]
position = Vector2( 1092.27, 704.204 )

[node name="Exit" parent="." index="10"]
margin_left = 1562.55
margin_top = 534.85
margin_right = 1762.55
margin_bottom = 634.85
rect_rotation = 90.0

[node name="ObjectiveAreas" type="Node2D" parent="." index="11"]

[node name="MoveObjective" type="Area2D" parent="ObjectiveAreas" index="0"]
position = Vector2( 750.713, 540.267 )
collision_layer = 2147483648

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObjectiveAreas/MoveObjective" index="0"]
position = Vector2( -119.779, 13.2136 )
shape = SubResource( 1 )

[node name="NightVisionObjective" type="Area2D" parent="ObjectiveAreas" index="1"]
position = Vector2( 1262.95, 255.337 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObjectiveAreas/NightVisionObjective" index="0"]
shape = SubResource( 2 )

[node name="DoorObjective" type="Area2D" parent="ObjectiveAreas" index="2"]
position = Vector2( 1373.11, 431.914 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObjectiveAreas/DoorObjective" index="0"]
shape = SubResource( 2 )

[node name="BriefcaseObjective" type="Area2D" parent="ObjectiveAreas" index="3"]
position = Vector2( 1092.26, 704.34 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObjectiveAreas/BriefcaseObjective" index="0"]
shape = SubResource( 3 )

[node name="ObjectivePositions" type="Node" parent="." index="12"]

[node name="MoveObjective" type="Position2D" parent="ObjectivePositions" index="0"]
position = Vector2( 694.117, 551.289 )

[node name="NightVisoionObjective" type="Position2D" parent="ObjectivePositions" index="1"]
position = Vector2( 1292.12, 254.954 )

[node name="DoorObjective" type="Position2D" parent="ObjectivePositions" index="2"]
position = Vector2( 1373.32, 378.597 )

[node name="BriefcaseObjective" type="Position2D" parent="ObjectivePositions" index="3"]
position = Vector2( 1093.23, 704.796 )

[node name="ExitObjective" type="Position2D" parent="ObjectivePositions" index="4"]
position = Vector2( 1519.05, 636.719 )

[node name="ObjectivePointer" type="Sprite" parent="." index="13"]
position = Vector2( 409.796, 529.931 )
z_index = 2
texture = ExtResource( 2 )

[node name="Light2D" type="Light2D" parent="ObjectivePointer" index="0"]
texture = ExtResource( 2 )

[node name="Tween" type="Tween" parent="." index="14"]

[node name="MessageSound" type="AudioStreamPlayer" parent="." index="15"]
stream = ExtResource( 6 )
volume_db = -8.0
[connection signal="body_entered" from="ObjectiveAreas/MoveObjective" to="." method="_on_MoveObjective_body_entered"]
[connection signal="body_entered" from="ObjectiveAreas/NightVisionObjective" to="." method="_on_NightVisionObjective_body_entered"]
[connection signal="body_entered" from="ObjectiveAreas/DoorObjective" to="." method="_on_DoorObjective_body_entered"]
[connection signal="body_entered" from="ObjectiveAreas/BriefcaseObjective" to="." method="_on_BriefcaseObjective_body_entered"]
